# Pos-2022-Semka

./: CMakeLists.txt  readme
Make/: Makefile
src/: Constants.h  MainClient.cpp  MainServer.cpp  MainSimpleServer.cpp  Main_Game.cpp  main.cpp
src/Client/: ClientGame.h  ClientLogic.cpp  ClientLogic.h  Game.h
src/Client-server/: client.cpp  definition.h  server.cpp  test.cpp
src/Client-server/Socket/: Client.h  Server.h  Socket.cpp  Socket.h
src/Client_logic/: ClientGame.cpp  ClientGame.h  Game.cpp  Game.h  GameData.h
src/Constants/: Constants.h  GameData.h
src/Game/: Game.cpp  Game.h  MainClient.cpp  MainServer.cpp  Main_Game.cpp  main.cpp
src/Game/Client/: ClientGame.cpp  ClientGame.h  ClientLogic.cpp  ClientLogic.h
src/Game/Constants/: GameData.h
src/Game/Graphics/Ball/: Ball.cpp  Ball.h
src/Game/Graphics/Paddle/: Paddle.cpp  Paddle.h
src/Game/Graphics/Resources/: Resources.cpp  Resources.h
src/Game/Graphics/Resources/Font/: Labels.cpp  Labels.h
src/Game/Graphics/Resources/Labels/: Labels.cpp  Labels.h
src/Game/Graphics/Resources/Sounds/: Sounds.cpp  Sounds.h
src/Game/Server/: ServerGame.cpp  ServerGame.h  ServerLogic.cpp  ServerLogic.h
src/Grafika/: Ball.cpp  Ball.h  Constants.h  Game.cpp  test.cpp
src/Graphics/: Game.h
src/Graphics/Ball/: Ball.cpp  Ball.h
src/Graphics/Constants/: Constants.h
src/Graphics/Paddle/: Paddle.cpp  Paddle.h
src/Network/TestExamples/: ClientTest.cpp  Server.cpp  ServerTest.cpp
src/SFML-client_server/: Client.cpp  ClientTest.cpp  Server.cpp  ServerTest.cpp
src/SFML-client_server/Sockets/: Client.h  MultiServer.h  SimpleServer.h  Sockets.cpp  Sockets.h
src/SFML-client_server/Sockets/MultiServer/: MultiServer.cpp  MultiServer.h
src/Sockets/: Sockets.cpp  Sockets.h
